<resources>
    <string name="app_name">MyShop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="bar_name_home">首页</string>
    <string name="bar_name_topic">专题</string>
    <string name="bar_name_sort">分类</string>
    <string name="bar_name_shop">购物车</string>
    <string name="bar_name_me">我的</string>

    <string name="special_price_info">元起</string>
    <string name="newgoods_price_info">￥</string>
    <string name="type_info_name">分类</string>


    <string name="title_newgoods_all">综合</string>
    <string name="title_newgoods_price">价格</string>
    <string name="title_nregoods_sort">分类</string>

    <string name="title_car_specs">请选择规格数量</string>
    <string name="title_car_assess">评价($)</string>
    <string name="title_car_lookall">查看全部</string>
    <string name="tips_error_goodid">错误的商品id</string>

    <!-- me - login -->
    <string name="tips_login">请输入正确的用户名和密码</string>
    <string name="hint_login_username">请输入用户名</string>
    <string name="tips_login_input">用户名和密码不能为空</string>

    <string name="hint_login_pw">请输入密码</string>
    <string name="tips_register">与注册的用户名或密码不符</string>
    <string name="tips_ok_login">已经登录</string>

    <!--me regist-->
    <string name="hint_regist_username">用户名</string>
    <string name="hint_regist_pw">确认密码</string>
    <string name="hint_regist_verification">验证码</string>
    <string name="tips_regist">请输入正确的用户名和密码和确认密码</string>
    <string name="tips_regist_pwd_repwd">密码和确认密码必须一致</string>
    <string name="tips_regist_pw_6">密码必须大于6位</string>
    <string name="tips_regist_ver">正确填写验证码</string>
    <string name="tips_regist_re">用户已经被注册</string>
    <string name="tips_login_ok">登录成功</string>


</resources>